--- a/Python_zero_ao_DS_introdução.ipynb
+++ b/Python_zero_ao_DS_introdução.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Antes de começar... gostaria de reforçar que os arquivos inciados com \"Python_do_zero_ao_DS\" referem-se aos conhecimentos adquiridos durante o curso ministrado pelo cientista de dados Meigarom Lopes.\n",
+    "Antes de começar... gostaria de reforçar que os arquivos inciados com \"Python_zero_ao_DS\" referem-se aos conhecimentos adquiridos durante o curso ministrado pelo cientista de dados Meigarom Lopes.\n",
     "\n",
     "Mais informações abaixo."
    ]
