--- a/Python_zero_ao_DS_introdução.ipynb
+++ b/Python_zero_ao_DS_introdução.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Alguns dados sobre o de estudo"
+    "# Alguns dados sobre o projeto de estudo"
    ]
   },
   {
